@@ -1,3 +1,9 @@
+2011-12-11  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* cpp/src/RigidRegistration2D.cxx (v0.3.0):
+
+	- Use MattesMutualInformation instead of MeanSquares as the metric.
+
 2011-12-10  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* cpp/src/RigidRegistration2D.cxx (v0.2.0):
